# spcd3

./: .gitignore  API.md  EXAMPLE.md  LICENSE  README-API.md  README-EXAMPLE.md  README.md  gulpfile.js  package-lock.json  package.json  rollup.config.js  tsconfig.json  webpack.config.js
.github/workflows/: build-and-deploy.yml  publish.yml
example/: index.html  index.html~  main.js  styles.css
example/data/: cereals.csv  cities2012.csv
example/lib/: spcd3.js  spcd3.js.map
example/lib/cjs/: spcd3.js  spcd3.js.map
example/lib/esm/: spcd3.js  spcd3.js.map
gulp-tasks/: bundle.js  bundleDeclaration.js  bundleJS.js  generate-icons.js  tauri.js  watch.js  watcher.js
lib/example/: index.html  main.js  styles.css
package/mac/: spcd3_1.0.0_aarch64.dmg
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/example/: DESCRIPTION.md  base.css  index.html  main.js  main.ts  reset.css  styles.css
src/example/data/: README.md  cities2012.csv
src/lib/: LIBRARY.md  brush.ts  canvas2d.ts  contextMenu.ts  globals.ts  helper.ts  helperApiFunc.ts  index.ts  io.ts  loadData.ts  parallelcoordinates.ts  reset.css  setContextMenu.ts  stylesheet.css  svgStringCreator.ts  toolbar.ts  utils.ts  webGL.ts  webGPU.ts
src/lib/icons/: icons.ts  iconsbase64.ts
src/lib/scripts/: base64Arrows.ts  brush.ts  helper.ts  icons.ts  io.ts  loader.ts  (+1 more)
src/scripts/: parallelcoordinates.ts
src/types/: d3-modules.d.ts
synthetic_data/: students_100.csv  students_1000.csv  students_10000.csv  students_100000.csv  synthetic_data_generator.py
(+6 files in other folders)
