[package]
name = "spcd3"
version = "1.0.0"
description = "Steerable Parallel Coordinates in D3 (SPCD3)"
authors = ["Romana Gruber"]
license = "MIT"
repository = "https://github.com/tugraz-isds/spcd3"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
